# voladice

./: README.md  pyproject.toml  test.py
pydice/: __init__.py  filters.py
src/voladice/: __init__.py
tests/: test.py
