[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voladice"
version = "0.1.0"
authors = [
    { name="Volatus", email="veritasvolatus@gmail.com" },
]
description = "Dice rolling and result manipulation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/volatusveritas/voladice"

[tool.setuptools.packages.find]
where=["src"]
